move cache provider to asm package and tweak classpath and pass byte array to cachesource